# server/swagger.json
@@ -65,7 +65,7 @@
       }
     },
     "/user/update/{userId}": {
-      "post": {
+      "put": {
         "tags": [
           "Users"
         ],
@@ -104,7 +104,7 @@
       }
     },
     "/user/update/firebase/{userId}": {
-      "post": {
+      "put": {
         "tags": [
           "Users"
         ],
@@ -143,7 +143,7 @@
       }
     },
     "/user/interests/{userId}": {
-      "post": {
+      "put": {
         "tags": [
           "Users"
         ],
@@ -194,16 +194,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "example": "any"
-                },
-                "lastName": {
-                  "example": "any"
-                },
                 "email": {
-                  "example": "any"
-                },
-                "password": {
                   "example": "any"
                 }
               }
@@ -211,9 +202,6 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "201": {
             "description": "Created"
           },
@@ -238,9 +226,6 @@
               "properties": {
                 "email": {
                   "example": "any"
-                },
-                "password": {
-                  "example": "any"
                 }
               }
             }
@@ -252,9 +237,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
           }
         }
       }
@@ -267,14 +249,35 @@
         "description": "",
         "parameters": [],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "400": {
             "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/user/verify/{userId}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
